# AutomatedGrading

./: .gitignore  API_TOKENS.env.example  AutoCompilerTest.py  AutoCompilerUnitTests.py  AutoGrader.py  GITHUB_TOKEN.env.example  README.md  UnitTests.java  hamlet.txt  pyproject.toml  students.xlsx
UnitTests/Task-1/: Task-1.java
UnitTests/Task-10/: ListProcessorTest.java
UnitTests/Task-11/: BoxProcessorTest.java
UnitTests/Task-12/: ReverseTest.java
UnitTests/Task-13/: EventPostTest.java
UnitTests/Task-14/: LinkedListTest.java
UnitTests/Task-15/: LinkedListStackTest.java  PostfixTest.java  StackTest.java
UnitTests/Task-16/: HashSetTest.java  SetTest.java  SetTestImplemented.java
UnitTests/Task-17/: TreeTest.java
UnitTests/Task-18/: GraphAlgorithmsTest.java  GraphTest.java
UnitTests/Task-19/: IntSorterTest.java  QuicksortFixedPivotInsertionTest.java  QuicksortFixedPivotTest.java  QuicksortRandomPivotInsertionTest.java  QuicksortRandomPivotTest.java
UnitTests/Task-2/: IndamonTest.java  Task-2.java
UnitTests/Task-20/: twopartsum_test.go
UnitTests/Task-3/: RectangleTest.java  TriangleTest.java
UnitTests/Task-4/: ClockTest.java  LoopsTest.java
UnitTests/Task-5/: ArraysTest.java  SetTheoryTest.java
UnitTests/Task-6/: BiasedDiceTest.java  DiceTest.java  RandomTesterTest.java
UnitTests/Task-7/: FileTextAnalyzer.java  FileTextAnalyzerTest.java  FileWordSplitter.java  FileWordSplitterTest.java  TextFileTest.java  hamlet.txt
UnitTests/Task-9/: CalculatorTest.java  SieveTest.java
